Added initial version of forward algorithm computations.

--- a/Source/ASR_Proj_test.html
+++ b/Source/ASR_Proj_test.html
@@ -7,6 +7,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
     <script src="http://cytoscape.github.io/cytoscape.js/api/cytoscape.js-latest/cytoscape.min.js"></script>
     <script src="uiCode.js"></script>
+
     
     <!-- Bootstrap core CSS -->
 <!--    <link href="../dist/css/bootstrap.min.css" rel="stylesheet">-->
@@ -70,6 +71,7 @@
          ================================================== -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="http://cdnjs.cloudflare.com/ajax/libs/mathjs/1.1.1/math.js"></script>
+        <script src="hmm.js"></script>
         <script src="../dist/js/bootstrap.min.js"></script>
     </body>
 </html>
