Manual Navigation started

--- a/Source/ASR_Proj_test.html
+++ b/Source/ASR_Proj_test.html
@@ -59,7 +59,7 @@
                         <option value="60">60</option>
                     </select>
                     <br>
-                    <Button class="btn btn-primary" onclick="StartAnnimating()">Start</Button>
+                    <Button class="btn btn-primary" onclick="StartAnnimating()">Evaluate</Button>
                     <input type="checkbox" id="autoModeCheckBox" onchange="autoModeChanged()" checked> Auto
                 </div>
 
