Editing hmm settings started

--- a/Source/ASR_Proj_test.html
+++ b/Source/ASR_Proj_test.html
@@ -52,6 +52,22 @@
                         <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Observation">
                             </div>
                     <br>
+                    <div class="info-div" style="width:57%">
+                       Select a state to change its default settings
+                    </div>
+                    <div class="visibleHmmSettings" id="hmmSettings" style="width:57%">
+                        <br>
+                        Initial Probabilities
+                        <br>
+                        <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Observation">
+                        Observation Probabilities
+                        <br>
+                        <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Observation">
+                        Transition Probablities
+                        <br>
+                        <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Observation">
+                    </div>
+                    <br>
                     Animation Speed(step per minute)<br>
                     <select name="animSpeed" class="form-control">
                         <option value="20">20</option>
