--- a/Source/ASR_Proj_test.html
+++ b/Source/ASR_Proj_test.html
@@ -49,23 +49,23 @@
                         <input type="number" class="form-control" id="numberOfStatesInput" placeholder="Number of states" onchange="numberOfStatesChanged()">
                     </div>
                     <div style="width:70%">
-                        <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Observation">
+                        <input type="text" class="form-control" id="observationsInput" onchange="observationsChanged()" placeholder="Observation">
                             </div>
                     <br>
-                    <div class="info-div" style="width:57%">
+                    <div class="visibleHmmSettingsInfo" id="hmmSettingsInf" style="width:57%">
                        Select a state to change its default settings
                     </div>
-                    <div class="visibleHmmSettings" id="hmmSettings" style="width:57%">
+                    <div class="hiddenHmmSettings" id="hmmSettings" style="width:57%">
                         <br>
                         Initial Probabilities
                         <br>
-                        <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Observation">
+                        <input type="number" class="form-control" id="initialProbInput">
                         Observation Probabilities
                         <br>
-                        <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Observation">
+                        <input type="text" class="form-control" id="observationProbInputs" placeholder="Comma separeted probs">
                         Transition Probablities
                         <br>
-                        <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Observation">
+                        <input type="text" class="form-control" id="transitionProbInputs" placeholder="Comma separeted probs">
                     </div>
                     <br>
                     Animation Speed(step per minute)<br>
