Fixed Viterbi typo.

--- a/Source/ASR_Proj_test.html
+++ b/Source/ASR_Proj_test.html
@@ -40,7 +40,7 @@
                         Algorithm<br>
                         <select name="algorithm" class="form-control">
                             <option value="forward">Forward</option>
-                            <option value="viterbe">Viterbe</option>
+                            <option value="viterbi">Viterbi</option>
                         </select>
                         <br>
                        
